--- a/.github/main.yml
+++ b/.github/main.yml
@@ -11,7 +11,7 @@ jobs:
     name: 'Deploy to Netlify'
     steps:
       - uses: actions/checkout@v4
-      - uses: jsmrcaga/action-netlify-deploy@v2.0.0
+      - uses: jsmrcaga/action-netlify-deploy@master
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.MY_TOKEN_SECRET }}
           NETLIFY_SITE_ID: ${{ secrets.MY_SITE_ID}}
