--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     name: 'Deploy to Netlify'
     steps:
-      - uses: actions/checkout@v4
-      - uses: jsmrcaga/action-netlify-deploy@master
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build Project
+        run: npm run build
+
+      - name: Deploy to Netlify
+        uses: jsmrcaga/action-netlify-deploy@master
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.MY_TOKEN_SECRET }}
           NETLIFY_SITE_ID: ${{ secrets.MY_SITE_ID }}
