--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: 'My Workflow'
+name: 'Deploy Site 1'
 
 on:
   push:
@@ -14,6 +14,6 @@ jobs:
       - uses: jsmrcaga/action-netlify-deploy@master
         with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.MY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.MY_SITE_ID }}
+          NETLIFY_SITE_ID: ${{ secrets.MY_SITE_ID_SITE_1 }}
           NETLIFY_DEPLOY_TO_PROD: true
           build_directory: dist/axelcars/browser
